= BinData Changelog

== Version 1.1.0 (2009-xx-xx)

* Allow anonymous fields in Records and Primitives.
* Add the ability to skip over unused data.

== Version 1.0.0 (2009-09-13)

* Is now compatible with Ruby 1.9
* Added reference manual.
* Added #rel_offset to Base.
* Removed support for deprecated functionality.

== Version 0.11.1 (2009-08-28)

* Allow wrapped types to work with struct's :onlyif parameter
* Use Array#index instead of #find_index for compatibility with Ruby 1.8.6
  (patch courtesy of Joe Rozner).

== Version 0.11.0 (2009-06-28)

* Sanitizing code was refactored for speed.
* Arbitrary sized integers and bit fields are now automatically instantiated.
* Add ability to wrap existing types and override their parameters.

== Version 0.10.0 (2009-04-17)

* Arbitrary byte sized integers are now supported (e.g. 24bit, 808bit).
* Renamed String :trim_value parameter to :trim_padding.
* BinData::Array now behaves more like Ruby's Array.
* Added debug_name
* Added ability to trace reading
* Primitives now behave as their value.  Calling #value is no longer needed.
* Renamed #to_s -> #to_binary_s to avoid confusion with Ruby's #to_s.
* Added #assign as the generic way to assign values to objects.
* Added :copy_on_change parameter to Choice.
* Implement #offset for all objects.
* Renamed Single -> BasePrimitive.
* Renamed SingleValue -> Primitive.
* Renamed MultiValue -> Record.
* The :onlyif parameter now only applies to fields inside Structs.
* LazyEvaluator can now supply arguments when invoking methods

== Version 0.9.3 (2008-12-03)

* Arrays can now :read_until => :eof
* TCPSocket and UDPSocket can now be used as input streams (patch courtesy
  of Peter Suschlik).
* Added 128 bit integers.
* Significant memory usage reduction.
* Added custom mandatory and default parameters for user defined MultiValues.

== Version 0.9.2 (2008-07-18)

* Added lazy instantiation to allow recursive definitions.
* Array elements can be appended at any position.