@@ -52,7 +52,7 @@ module BinData
       end
 
       def endian(endian = nil)
-        @endian ||= nil
+        @endian ||= default_endian
         if [:little, :big].include?(endian)
           @endian = endian
         elsif endian != nil
@@ -63,9 +63,13 @@ module BinData
       end
 
       def hide(*args)
-        @hide ||= []
+        @hide ||= default_hide
         @hide.concat(args.collect { |name| name.to_s })
         @hide
+      end
+
+      def fields #:nodoc:
+        @fields ||= default_fields
       end
 
       def method_missing(symbol, *args) #:nodoc:
@@ -94,18 +98,35 @@ module BinData
       #-------------
       private
 
-      def fields
-        unless defined? @fields
-          sanitizer = Sanitizer.new
-          @fields = sanitizer.create_sanitized_fields(endian)
+      def parent_record
+        ancestors[1..-1].find { |cls|
+          cls.ancestors[1..-1].include?(BinData::Record)
+        }
+      end
+
+      def default_endian
+        rec = parent_record
+        rec ? rec.endian : nil
+      end
+
+      def default_hide
+        rec = parent_record
+        rec ? rec.hide.dup : []
+      end
+
+      def default_fields
+        rec = parent_record
+        if rec
+          Sanitizer.new.clone_sanitized_fields(rec.fields)
+        else
+          Sanitizer.new.create_sanitized_fields
         end
-        @fields
       end
 
       def append_field(type, name, params)
         ensure_valid_name(name)
 
-        fields.add_field(type, name, params)
+        fields.add_field(type, name, params, endian)
       rescue UnknownTypeError => err
         raise TypeError, "unknown type '#{err.message}' for #{self}", caller(2)
       end
